--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "itsdangerous>=2.1.2",
     "redis>=5.0.0",
     "aiofiles>=23.2.1",
+    "boto3>=1.34.0",
 ]
 
 [project.optional-dependencies]
