auth is working!

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,36 @@
-AZURE_TENANT_ID=7c2f7d68-9e11-48ca-81bd-362a0baa5fc2
+# F-Prime MCP Server Configuration
+# 
+# Most settings are loaded from AWS Secrets Manager (webpage_token secret)
+# This file is only needed for local overrides or non-AWS deployments
 
-AWS_DEFAULT_REGION=us-east-2
+# Server Configuration (optional)
+SERVER_HOST=0.0.0.0
+SERVER_PORT=8000
 
+# Logging (optional)
+LOG_LEVEL=INFO
+
+# Optional: App role name if using app roles instead of groups
+# FPRIME_APP_ROLE=FPrime.Member
+
+# Server Configuration
 SERVER_HOST=0.0.0.0
 SERVER_PORT=8000
 SERVER_ENV=development
 
+# Session Configuration
 SESSION_SECRET_KEY=generate-a-secure-random-key-here
 SESSION_EXPIRE_MINUTES=60
 
+# Redis Configuration (for session storage in production)
 REDIS_URL=redis://localhost:6379/0
 
+# CORS Configuration (comma-separated origins)
 CORS_ORIGINS=http://localhost:3000,https://claude.ai
 
+# Logging
 LOG_LEVEL=INFO
+
+# Optional: Custom OIDC endpoints (defaults to Microsoft common endpoints)
+# OIDC_AUTHORITY=https://login.microsoftonline.com/{tenant_id}
+# OIDC_DISCOVERY_URL=https://login.microsoftonline.com/{tenant_id}/v2.0/.well-known/openid-configuration
